<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Restarting</string>
    <string name="textView">1. Text View</string>
    <string name="textViewCode">""&lt;?xml version="1.0" encoding="utf-8"?&gt;\n&lt;LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"\n    xmlns:app="http://schemas.android.com/apk/res-auto"\n    xmlns:tools="http://schemas.android.com/tools"\n    android:layout_width="match_parent"\n    android:layout_height="match_parent"\n    android:orientation="vertical"\n    tools:context=".TextView"&gt;\n\n    &lt;TextView\n        android:id="@+id/textView2"\n        android:layout_width="match_parent"\n        android:layout_height="wrap_content"\n        android:fontFamily="sans-serif-black"\n        android:text="This is a Text View that displays text"\n        android:onClick="onClick"\n        android:textAlignment="center"\n        android:textSize="35sp"\n        android:textStyle="italic"\n        android:typeface="sans"\n         /&gt;\n\n&lt;/LinearLayout&gt;""</string>
    <string name="TextViewText">This is a Text View that displays text</string>
    <string name="EditText">2. Edit Text</string>
    <string name="overview">Think Beyond the Horizon</string>
    <string name="scrollView">3. Scroll View</string>
    <string name="scrollViewText">We have often heard that ‘Cricket is religion in India and Sachin is God’. There is no better statement that can justify the status of Sachin Tendulkar in India. Sachin Tendulkar in India is not just a cricketer, he is God. Also for common people in India, he is an example of hard work and determination. Thus, he is worshipped by everyone in India. The essay on Sachin Tendulkar is a small insight into one of the greatest ever sportsman to have played any game.\n\n
Sachin Tendulkar was born to a middle-class family and came to limelight with a performance in the school tournament. He held a record partnership at that time with Vinod Kambli playing for their school tournament. That innings changed Sachin’s life completely and he became famous in a fortnight. In those days, the school tournaments had a different fanbase and a good performance can bring you in limelight. Because of that inning, people all over India came to know who Sachin Tendulkar was! Thus, it also caught Indian selector’s eye and Sachin Tendulkar was selected for the tour of Pakistan at an age of 16!\n\n
At 16 years of age, Sachin was supposed to face the likes of Wasim Akram and Waqar Younis. The Pakistani spearheads were known for their swing and sharp bouncers. Thus, Sachin had a hard time facing Pakistan fast bowlers. Still, he managed to come out with some runs under his belt. Thus, it would justify the Sachin’s selection in the series to come. The series was a memorable experience for Sachin as he also got to spend time with his idols in the Indian dressing room.\n\n
<b>Sachin Tendulkar – The Opener</b>\n\n
The real contribution by Sachin Tendulkar to Indian cricket is not the runs he scored or the matches he won. The main contribution by Sachin was the way he changed the opening in ODI cricket. He was given an opportunity to open against New Zealand in New Zealand in 1992 and he made it count. Thus, a very different dimension of Sachin Tendulkar came into light. The major contribution of runs scored by him in ODI cricket is by opening the batting for India. Thus, India got one of the reliable openers in Sachin who can also score at more than run a ball.\n\n
Soon after he started opening, India started to get good starts and opposition were under pressure right from the start. Thus, there have been many match winnings innings by Sachin since he started opening. One such inning that comes to mind is the ‘desert storm’. He scored two back to back hundreds against the mighty Australians in 1996 and won the series for India.\n\n
One of the things that made Sachin great was to score against the big sides. He consistently scored hundreds against big teams like Australia, England, and Pakistan. Also, he still is the player with the highest runs against Australia. This in itself shows the caliber of Sachin Tendulkar. Australia in those days was termed as the invincibles. Playing against Australia was always the toughest challenge that a batsman can face in those days. But for Sachin, it was just like scoring against any other team.\n\n
Sachin Tendulkar will always be remembered as one who changed the Indian cricket and made it a powerhouse. Sachin Tendulkar was born to play cricket only.
    </string>
    <string name="intents">4. Intents</string>
    <string name="fragment">5. Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_listView">6. Custom ListView</string>
    <string name="spinner">7. Spinner</string>
    <string name="tabhost">8. WhatsApp Like</string>
    <string name="_9_sqlite">9. SQLite</string>
    <string name="_10_score_keeper_app">10 Score Keeper App</string>
    <string name="_11_material_dialogs">11. Material Dialogs</string>


</resources>
